--- a/templates/home.html
+++ b/templates/home.html
@@ -34,7 +34,7 @@
                 <img class="card-img-top" src="{{url_for('static', filename='images/cat1.jpg')}}">
                 <div class="card-body">
                   <h5 class="card-title">{{cat.name}}</h5>
-                  <p class="card-text">Votes: 0</p>
+                  <p class="card-text">Votes: {{cat.votes}}</p>
                   <a href="cats/{{cat.id}}" class="btn btn-primary">View details</a>
                 </div>
               </div>
@@ -42,6 +42,8 @@
       </div>
       {% endfor%}
     </div>
+    <a href="create"><button>Add a Cat</button></a>
+    
   
   <!--BOOTSTRAP Javascript import-->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
